dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,6 @@ body {
   font-weight: 400;  
   color: #4B5563; 
 }
+.dark-date-birth input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1) brightness(2) !important;
+}
